Fixed sound cloud. Fixes #157, #181, #186, #187